[tool.poetry]
name = "pytubefix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
flake8 = "^7.1.1"
ruff = "^0.8.3"

[tool.poetry.group.test.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pytubefix"
version = "8.8.1"
authors = [{ name = "Juan Bindez", email = "juanbindez780@gmail.com" }]
description = "Python3 library for downloading YouTube Videos."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT license" }
keywords = ["youtube", "download", "video", "stream"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Internet",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/juanbindez/pytubefix"
"Bug Reports" = "https://github.com/juanbindez/pytubefix/issues"
"Read the Docs" = "http://pytubefix.readthedocs.io/"

[project.scripts]
pytubefix = "pytubefix.cli:main"

[tool.setuptools.packages.find]
include = ["pytubefix*"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"pytubefix" = ["botGuard/vm/*.js"]
